Final version for prezo

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,10 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="united.min.css">
+
   <link rel="stylesheet" href="app.css">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 <!-- 
   <link rel="stylesheet" href="cover.css">
  -->
@@ -35,18 +38,22 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
+  <script src="../node_modules/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
   <script src="bower_components/momentjs/min/moment.min.js"></script>
   <script src="bower_components/momentjs/min/locales.min.js"></script>
   <script src="bower_components/humanize-duration/humanize-duration.js"></script>
-  <script src="../ng-twitter-api/dist/ng-twitter-api.min.js"></script>
-  <script src="../bower_components/jsSHA/src/sha1.js"></script>
+  <script src="bower_components/ng-twitter-api/dist/ng-twitter-api.min.js"></script>
+  <script src="bower_components/jsSHA/src/sha1.js"></script>
   
   
   <script src="app.js"></script>
+  <script src="oauth.js"></script>
+  <script src="services.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="home/home.js"></script>
