--- a/app/home/home.html
+++ b/app/home/home.html
@@ -37,6 +37,8 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  background: url('images/bgdark.jpg') no-repeat;
+background-size: cover;
 }
 body {
   color: #fff;
@@ -178,9 +180,9 @@ body {
 	  <h3 class="text-muted"><a href="#/">Workout App</a></h3>
 	</div>
 	<div class="inner cover">
-	  <h1 class="cover-heading">Welcome to workout, John!</h1>
+	  <h1 class="cover-heading">It's time for a workout, John!</h1>
 	  <p class="lead">
-		<a href="#/dashboard" class="btn btn-lg btn-default">Start Workout</a>
+		<a href="#/dashboard" class="btn btn-lg btn-default">Start Workout</a>		
 	  </p>
 	</div>
 	<div class="mastfoot">
