--- a/app/home/home.html
+++ b/app/home/home.html
@@ -180,9 +180,9 @@ body {
 	  <h3 class="text-muted"><a href="#/">Workout App</a></h3>
 	</div>
 	<div class="inner cover">
-	  <h1 class="cover-heading">It's time for a workout, John!</h1>
+	  <h1 class="cover-heading">It's time for a workout, Anthony!</h1>
 	  <p class="lead">
-		<a href="#/dashboard" class="btn btn-lg btn-default">Start Workout</a>		
+		<a href="#/dashboard" class="btn btn-lg btn-default">Let's do it</a>		
 	  </p>
 	</div>
 	<div class="mastfoot">
